--- a/hiredis_wrapper.vcxproj
+++ b/hiredis_wrapper.vcxproj
@@ -142,6 +142,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="test_main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="hiredis\adapters\ae.h" />
+    <ClInclude Include="hiredis\adapters\glib.h" />
+    <ClInclude Include="hiredis\adapters\ivykis.h" />
+    <ClInclude Include="hiredis\adapters\libev.h" />
+    <ClInclude Include="hiredis\adapters\libevent.h" />
+    <ClInclude Include="hiredis\adapters\libuv.h" />
+    <ClInclude Include="hiredis\adapters\macosx.h" />
+    <ClInclude Include="hiredis\adapters\qt.h" />
+    <ClInclude Include="hiredis\async.h" />
+    <ClInclude Include="hiredis\hiredis.h" />
+    <ClInclude Include="hiredis\read.h" />
+    <ClInclude Include="hiredis\sds.h" />
+    <ClInclude Include="hiredis\wrapper\redis_wrapper.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
