--- a/hiredis_wrapper.vcxproj
+++ b/hiredis_wrapper.vcxproj
@@ -158,6 +158,9 @@
     <ClInclude Include="hiredis\hiredis.h" />
     <ClInclude Include="hiredis\read.h" />
     <ClInclude Include="hiredis\sds.h" />
+    <ClInclude Include="hiredis\wrapper\redis_hash.hpp" />
+    <ClInclude Include="hiredis\wrapper\redis_list.hpp" />
+    <ClInclude Include="hiredis\wrapper\redis_others.hpp" />
     <ClInclude Include="hiredis\wrapper\redis_string.hpp" />
     <ClInclude Include="hiredis\wrapper\redis_connection.hpp" />
     <ClInclude Include="hiredis\wrapper\redis_pool.hpp" />
