--- a/hiredis_wrapper.vcxproj.filters
+++ b/hiredis_wrapper.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClInclude Include="hiredis\wrapper\redis_hash.hpp">
       <Filter>hiredis\wrapper</Filter>
     </ClInclude>
+    <ClInclude Include="hiredis\wrapper\redis_set.hpp">
+      <Filter>hiredis\wrapper</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
