--- a/hiredis_wrapper.vcxproj.filters
+++ b/hiredis_wrapper.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="test_main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test_main2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hiredis\async.h">
@@ -93,6 +96,9 @@
       <Filter>hiredis\wrapper</Filter>
     </ClInclude>
     <ClInclude Include="hiredis\wrapper\redis_set.hpp">
+      <Filter>hiredis\wrapper</Filter>
+    </ClInclude>
+    <ClInclude Include="hiredis\wrapper\convert.hpp">
       <Filter>hiredis\wrapper</Filter>
     </ClInclude>
   </ItemGroup>
