--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /hiredis_wrapper.VC.VC.opendb
+/Debug/hiredis_wrapper.tlog
+/Debug
